[Issue #140] Moved the page list into a horizontal scrolling div.
 * The cover is not shown in this scrolling div.

--- a/web-frontend/src/app/comic/comic-details/comic-details.component.css
+++ b/web-frontend/src/app/comic/comic-details/comic-details.component.css
@@ -1,3 +1,13 @@
 #comic-details-info-block {
 	border-radius: 5px;
 }
+
+.horizontal-scrolling-div {
+	overflow-x: scroll;
+	overflow-y: hidden;
+	white-space: nowrap;
+}
+
+.horizontal-scrolling-page {
+	display: inline-block;
+}
